--- a/.github/workflows/build-angular.yml
+++ b/.github/workflows/build-angular.yml
@@ -12,10 +12,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
+    - name: Check Node.js version
+      run: node -v
+   
 
     - name: Install dependencies
       run: npm ci
